RESOLVED FIXED266000
[macOS] Occasional crash when invoking the completion handler in WebKit::requestPayloadForQRCode
https://bugs.webkit.org/show_bug.cgi?id=266000
Summary [macOS] Occasional crash when invoking the completion handler in WebKit::requ...
Wenson Hsieh
Reported 2023-12-07 08:43:23 PST
Attachments
Wenson Hsieh
Comment 1 2023-12-07 08:54:46 PST
EWS
Comment 2 2023-12-07 14:24:45 PST
Committed 271695@main (b2788c65e9c9): <https://commits.webkit.org/271695@main> Reviewed commits have been landed. Closing PR #21443 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.