[macOS] Occasional crash when invoking the completion handler in WebKit::requestPayloadForQRCode https://bugs.webkit.org/show_bug.cgi?id=266000 rdar://117083360

Reviewed by Aditya Keerthi.

This is a speculative fix for rdar://117083360, where (on certain version of macOS), Safari crashes
underneath this QR code detection codepath, due to the completion handler being invoked more than
once. While I wasn't able to reproduce the crash locally, forcing the completion handler to be
called twice was sufficient to replicate a crash under the same stack.

It's possible that Vision has a bug wherein `-[VNImageRequestHandler performRequests:error:]` yields
a non-null `NSError` for the error outparam, yet the `VNDetectBarcodesRequest`'s completion handler
is still invoked (presumably, also with an `NSError`). rdar://119319173 tracks further investigation
here.

* Source/WebKit/Platform/cocoa/ImageAnalysisUtilities.mm:
(WebKit::requestPayloadForQRCode):

Canonical link: https://commits.webkit.org/271695@main